[package]
name = "strain"
version = "0.1.1"
edition = "2021"
description = "A CPU stressing utility written in Rust"
license = "GPL-3.0-or-later"

[dependencies]
rug = { version = "1.24.1", features = ["default", "complex"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["default", "use-system-libs"] }
clap = { version = "4.5.9", features = ["derive"] }
log = "0.4.22"
humantime = "2.1.0"
fern = "0.6.2"

[profile.release]
strip = "symbols"
lto = true
