[package]
name = "strain"
version = "0.1.3"
edition = "2021"
description = "A CPU stressing utility written in Rust"
license = "GPL-3.0-or-later"

[dependencies]
rug = { version = "1.26.1", features = ["default", "complex"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["default", "use-system-libs"] }
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.22"
humantime = "2.1.0"
fern = "0.7.1"

[profile.release]
strip = "symbols"
lto = true
