[package]
name = "strain"
version = "0.1.3"
edition = "2021"
description = "A CPU stressing utility written in Rust"
license = "GPL-3.0-or-later"

[dependencies]
rug = { version = "1.27.0", features = ["default", "complex"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["default", "use-system-libs"] }
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.26"
humantime = "2.2.0"
fern = "0.7.1"

[profile.release]
strip = "symbols"
lto = true
